compiler/testData/diagnostics/tests/j+k/accessClassObjectFromJava.kt
class Foo {
  companion object {
    konst bar = 1

    fun test(a: Foo.<!UNRESOLVED_REFERENCE!>`object`<!>) {

    }

  }
}
